<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:layout_marginTop="240dp"
              android:visibility="gone">

	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			style="@style/text_48_f"
			android:text="@string/well_done"
			android:layout_gravity="center_horizontal"/>
	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			style="@style/text_30_b"
			android:text="@string/messge_success"
			android:layout_gravity="center_horizontal"
			android:layout_marginTop="15dp"/>
	<Button
			android:id="@+id/btn_start"
			android:layout_width="317dp"
			android:layout_height="wrap_content"
			android:text="@string/btn_start_sue"
			android:background="@drawable/common_button"
			android:layout_gravity="center_horizontal"
			android:layout_marginTop="60dp"
			style="@style/text_30_f"/>
</LinearLayout>